[calendar] Fix overflow

--- a/src/components/discovery-calendar/discovery-calendar.scss
+++ b/src/components/discovery-calendar/discovery-calendar.scss
@@ -15,23 +15,13 @@
  */
 
 :host {
-  & > div {
-    width: 100%;
-    height: 100%;
-
-
-    & > div {
-      width: 100%;
-      height: 100%;
-    }
-  }
 
   .calendar-wrapper {
     width: 100%;
     height: 100%;
     overflow-y: auto;
     overflow-x: hidden;
-    position: absolute;
+ //   position: absolute;
     margin-right: 5px;
 
     & > div {
